--- a/templeșipriramide.html
+++ b/templeșipriramide.html
@@ -71,6 +71,7 @@
     <div class="media-container">
         <!-- Imaginea -->
          <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt">
+        <figcaption>Piramida lui Keops - Egipt</figcaption>
     </div>
 
     <h2>Ziguratele</h2>
