--- a/templeșipriramide.html
+++ b/templeșipriramide.html
@@ -70,7 +70,7 @@
 
     <div class="media-container">
         <!-- Imaginea -->
-         <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt">
+         <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt" width="300">
         <figcaption>Piramida lui Keops - Egipt</figcaption>
     </div>
 
