--- a/templeșipriramide.html
+++ b/templeșipriramide.html
@@ -70,8 +70,7 @@
 
     <div class="media-container">
         <!-- Imaginea -->
-         <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt" width="700">
-        <figcaption>Piramida lui Keops - Egipt</figcaption>
+         <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt">
     </div>
 
     <h2>Ziguratele</h2>
