Update Marile alianțe politico militare.html

--- a/Marile alianțe politico militare.html
+++ b/Marile alianțe politico militare.html
@@ -56,7 +56,7 @@
     
     <div class="media-container">
         <!-- Imaginea -->
-        <img src="images/Marile aliante politico-militare.jpg" alt="Imagine reprezentativă" />
+        <img src="images/Alianțe militare" alt="Marile alianțe politico-militare"/>
     </div>
 
     <h2>Imperiile coloniale și dezvoltarea economică</h2>
