Update Marile alianțe politico militare.html

--- a/Marile alianțe politico militare.html
+++ b/Marile alianțe politico militare.html
@@ -56,7 +56,7 @@
     
     <div class="media-container">
         <!-- Imaginea -->
-        <img src="images/Marile aliante politico-militare" alt="Marile alianțe politico-militare"/>
+        <img src="images/Marile aliante politico-militare.jpg" alt="Marile alianțe politico-militare"/>
     </div>
 
     <h2>Imperiile coloniale și dezvoltarea economică</h2>
@@ -83,7 +83,7 @@
     <p>- 1907 - formată din Marea Britanie, Franţa şi Rusia;</p>
     <div class="media-container">
         <!-- Imaginea -->
-         <img src="images/Triple_Alliance.jpg" alt="Alianțe militare">
+         <img src="images/Triple_Alliance.webp" alt="Alianțe militare">
     </div>
     <a href="https://eduboom.ro/video/4430/marile-aliante-politico-militare-in-lume-" target="_blank"></a>
 </main>
