Update Marile alianțe politico militare.html

--- a/Marile alianțe politico militare.html
+++ b/Marile alianțe politico militare.html
@@ -47,7 +47,7 @@
 </header>
 
 <main>
-    <h2>Monumente impunătoare</h2>
+    <h2>Momente premergătoare</h2>
     <p>
            La începutul sec. al XX-lea, Peninsula Balcanică era un adevărat “butoi cu pulbere”:
            - în 1908, Austro-Ungaria a anexat Bosnia şi Herţegovina, bulgarii (1908) şi albanezii (1912) s-au eliberat de sub stăpânirea otomană;
