Update Marile alianțe politico militare.html

--- a/Marile alianțe politico militare.html
+++ b/Marile alianțe politico militare.html
@@ -49,9 +49,13 @@
 <main>
     <h2>Momente premergătoare</h2>
     <p>
-           La începutul sec. al XX-lea, Peninsula Balcanică era un adevărat “butoi cu pulbere”:
-           - în 1908, Austro-Ungaria a anexat Bosnia şi Herţegovina, bulgarii (1908) şi albanezii (1912) s-au eliberat de sub stăpânirea otomană;
-           - în 1912 şi 1913 au avut loc două războaie balcanice în urma cărora România a anexat Cadrilaterul - două județe din sudul Dobrogei (Caliacra și Durostor) de la bulgari.
+           La începutul sec. al XX-lea, Peninsula Balcanică era un adevărat “butoi cu pulbere”:   
+    </p>
+    <p> 
+        - în 1908, Austro-Ungaria a anexat Bosnia şi Herţegovina, bulgarii (1908) şi albanezii (1912) s-au eliberat de sub stăpânirea otomană;
+    </p>
+    <p>
+         - în 1912 şi 1913 au avut loc două războaie balcanice în urma cărora România a anexat Cadrilaterul - două județe din sudul Dobrogei (Caliacra și Durostor) de la bulgari.
     </p>
     
     <div class="media-container">
@@ -62,9 +66,15 @@
     <h2>Imperiile coloniale și dezvoltarea economică</h2>
     <p>
         - noile puteri ale lumii la începutul secolului: S.U.A., Marea Britanie, Germania. Franţa şi Japonia;
-    - lumea era dominată teritorial de către Marea Britanie și Franța care dețineau imense imperii coloniale ( ~ 60 milioane km2).
-    - Germania şi Italia au intrat în competiţia pentru teritorii coloniale;
-    - Franța dorea să-și ia revanșa față de Germania în urma înfrângerii din 1871 când Franța a pierdut două teritorii (Alsacia și Lorena);
+    </p>
+    <p>
+         - lumea era dominată teritorial de către Marea Britanie și Franța care dețineau imense imperii coloniale ( ~ 60 milioane km2).
+    </p>
+    <p>
+         - Germania şi Italia au intrat în competiţia pentru teritorii coloniale;
+    </p>
+    <p>
+        - Franța dorea să-și ia revanșa față de Germania în urma înfrângerii din 1871 când Franța a pierdut două teritorii (Alsacia și Lorena);
     </p>
 
     <div class="media-container">
@@ -77,7 +87,9 @@
     <h3>1. Tripla Alianță</h3>
     <p>
         - 1879 - formată din Germania, Austro-Ungaria şi Italia- 1882 - o alianţă inițial defensivă;
-        - în 1883, România aderă și ea (în secret) la Tripla Alianţă;
+    </p>
+    <p>
+         - în 1883, România aderă și ea (în secret) la Tripla Alianţă;
     </p>
     <h3>2. Tripla Înţelegere (Antanta)</h3>
     <p>- 1907 - formată din Marea Britanie, Franţa şi Rusia;</p>
@@ -85,7 +97,7 @@
         <!-- Imaginea -->
          <img src="images/Triple_Alliance.webp" alt="Alianțe militare">
     </div>
-    <a href="https://eduboom.ro/video/4430/marile-aliante-politico-militare-in-lume-" target="_blank"></a>
+    <a href="https://eduboom.ro/video/4430/marile-aliante-politico-militare-in-lume-" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #ff9800; color: white; text-decoration: none; border-radius: 5px;">Vezi videoclipul pe EduBoom</a>
 </main>
 
 </body>
