--- a/clasa8.html
+++ b/clasa8.html
@@ -77,7 +77,7 @@
         <li><a href="#">Izvoare istorice despre geto‐daci: Herodot, Strabon, Cassius Dio</a></li>
         <li><a href="#">Burebista. Decebal; cucerirea Daciei de către romani</a></li>
         <li><a href="#">Dacia romană. Romanizarea. Creștinismul</a></li>
-        <li><a href="#">Așezarea slavilor la sudul Dunării. Romanitatea orientală</a></li>
+        <li><a href="Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html">Așezarea slavilor la sudul Dunării. Romanitatea orientală</a></li>
         <li><a href="#">Poporul român, popor romanic</a></li>
         <li><a href="#">Primele forme de organizare statală</a></li>
         <li><a href="#">Statele medievale în spațiul românesc:Transilvania, Țara Românească, Moldova, Dobrogea</a></li>
