Update Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html

--- a/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
+++ b/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
@@ -59,7 +59,7 @@
 
     <h2>2. Dovezi ale continuității locuirii</h2>
     <p>
-        Dovezile arheologice, cum ar fi unelte, ceramică și necropole, alături de menținerea stăpânirii romane în Dobrogea, confirmă continuitatea vieții romane în spațiul dintre Carpați, Dunăre și Marea Neagră.
+        Dovezile arheologice, cum ar fi unelte, podoabe, ceramică și necropole, alături de menținerea stăpânirii romane în Dobrogea, confirmă continuitatea vieții romane în spațiul dintre Carpați, Dunăre și Marea Neagră.
     </p>
 
     <div class="media-container">
@@ -71,7 +71,25 @@
     <p>Dispariția protecției romane și amenințarea popoarelor migratoare au determinat populația să se adapteze, preferând așezările mici și retrase, conducând la o ruralizare a vieții daco-romane.</p>
     <h2>4. Impactul migrației popoarelor</h2>
     <p>
-        După retragerea romană, migrările popoarelor, în special a slavi­lor și protobulgarilor, au influențat structura socială și lingvistică a regiunii, separând comunitățile romanizate și ducând la formarea unor noi popoare în sudul Dunării.
+        După retragerea aureliană, o serie de populații migratoare s-au abătut asupra spațiului nord-dunărean. Dintre populațiile migratoare pot fi amintite:
+    </p>
+    <p>
+        - goții - cu cele 2 ramuri: ostrogoții și vizigoții - dinspre V
+    </p>
+    <p>
+        - hunii - dinspre E
+    </p>
+    <p>
+        - gepizii - dinspre V
+    </p>
+    <p>
+        - avarii - dinspre E
+    </p>
+    <p>
+        - slavii - dinspre N
+    </p>
+    <p>
+        Dintre toate popula'iile migratoare, slavii au avut un rol decisiv în formarea unui nou popor la N de Dunăre - poporul român - după care trec și se stabilesc la S de Dunăre în anul 602.
     </p>
 
     <div class="media-container">
