--- a/Popoareleorientuluiantic.html
+++ b/Popoareleorientuluiantic.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popoare și Civilizații - Orientul Antic</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+         body {
             margin: 0;
-            padding: 0;
-            background-color: #b4eef4;
+            font-family: Arial, sans-serif;
+            background-color: #e0f7fa; /* Turcoaz pal pentru fundal */
         }
         header {
             background-color: #4caf50; /* Verde */
-            color: white;
-            text-align: center;
             padding: 20px;
+            text-align: center;
+            color: white;
         }
-         main {
+        main {
             padding: 20px;
             text-align: justify;
             font-size: 18px;
