--- a/Popoareleorientuluiantic.html
+++ b/Popoareleorientuluiantic.html
@@ -45,7 +45,7 @@
         <h1>Popoare și Civilizații în Orientul Antic</h1>
     </header>
     
-    <div class="container">
+    <div class="media-container">
         <h2>Sinteză</h2>
 
         <h3>Definiția poporului</h3>
