--- a/clasa5.html
+++ b/clasa5.html
@@ -79,7 +79,7 @@
         <li><a href="#">Mediul natural și viața cotidiană în Orientul Antic</a></li>
         <li><a href="templeșipriramide.html">Temple și piramide</a></li>
         <li><a href="#">Orașul-stat Babilon</a></li>
-        <li><a href="Popoareleorientuluiantic.html">Popoare și civilizații pe harta Orientului Antic</a></li>
+        <li><a href="Popoarele Orientului antic.html">Popoare și civilizații pe harta Orientului Antic</a></li>
         <li><a href="#">Chinezii</a></li>
         <li><a href="#">Evreii</a></li>
         <li><a href="#">Inventarea scrierii – de la pictograme la alfabet</a></li>
