Update Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html

--- a/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
+++ b/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
@@ -57,7 +57,7 @@
         <img src="images/Dacia romană.jpg" alt="Dacia romană"/>
     </div>
 
-    <h2>2. Dovezi ale continuității locuirii</h2>
+    <h2>2. Dovezi ale continuității locuirii la N de Dunăre</h2>
     <p>
         Dovezile arheologice, cum ar fi unelte, podoabe, ceramică și necropole, alături de menținerea stăpânirii romane în Dobrogea, confirmă continuitatea vieții romane în spațiul dintre Carpați, Dunăre și Marea Neagră.
     </p>
@@ -68,13 +68,13 @@
     </div>
 
     <h2>3. Adaptarea la noul context geopolitic</h2>
-    <p>Dispariția protecției romane și amenințarea popoarelor migratoare au determinat populația să se adapteze, preferând așezările mici și retrase, conducând la o ruralizare a vieții daco-romane.</p>
-    <h2>4. Impactul migrației popoarelor</h2>
+    <p>Dispariția protecției romane și amenințarea populațiilor migratoare au determinat populația nord-dunăreană să se adapteze, preferând așezările mici și retrase, conducând la o ruralizare a vieții daco-romane.</p>
+    <h2>4. Impactul migrației</h2>
     <p>
-        După retragerea aureliană, o serie de populații migratoare s-au abătut asupra spațiului nord-dunărean. Dintre populațiile migratoare pot fi amintite:
+        După retragerea aureliană, o serie de populații migratoare s-au abătut asupra spațiului nord-dunărean. Dintre acestea pot fi amintite:
     </p>
     <p>
-        - goții - cu cele 2 ramuri: ostrogoții și vizigoții - dinspre V
+        - goții - cu cele 2 ramuri: <strong>ostrogoții</strong> și <strong>vizigoții</strong> - dinspre V
     </p>
     <p>
         - hunii - dinspre E
@@ -89,7 +89,7 @@
         - slavii - dinspre N
     </p>
     <p>
-        Dintre toate popula'iile migratoare, slavii au avut un rol decisiv în formarea unui nou popor la N de Dunăre - poporul român - după care trec și se stabilesc la S de Dunăre în anul 602.
+        Dintre toate populațiile migratoare, slavii au avut un rol decisiv în formarea unui nou popor la N de Dunăre - poporul român - după care trec și se stabilesc la S de Dunăre în anul 602.
     </p>
 
     <div class="media-container">
