--- a/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
+++ b/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
@@ -101,6 +101,21 @@
     <p>În urma asimilării slavilor și a influențelor externe, autohtonii romanizați au evoluat într-un popor nou, cu identitate distinctă, limba română formându-se din dialecte neolatine, asigurându-le individualitatea în contextul european.</p>
     
 </main>
+    <script>
+    let zoomLevel = 1;
+
+    document.addEventListener('wheel', function(event) {
+        if (event.deltaY < 0) {
+            // Scroll up -> Zoom In
+            zoomLevel += 0.1;
+        } else {
+            // Scroll down -> Zoom Out
+            zoomLevel -= 0.1;
+        }
+        zoomLevel = Math.min(Math.max(zoomLevel, 0.5), 3); // Limitează zoom între 0.5 și 3
+        document.getElementById("content").style.transform = `scale(${zoomLevel})`;
+    });
+</script>
 
 </body>
 </html>
