Update Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html

--- a/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
+++ b/Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html
@@ -47,7 +47,7 @@
     <h1>Așezarea slavilor la S-ul Dunării. Romanitatea orientală</h1>
 </header>
 
-<main>
+<main id="content">
     <h2>1. Procesul de romanizare post-retragere</h2>
     <p>
         Retragerea aureliană din 271/275 nu a stopat procesul de romanizare în zona dunăreană, romanii păstrând populația locală care a continuat să dezvolte o cultură romană distinctă.
@@ -102,7 +102,8 @@
     <p>În urma asimilării slavilor și a influențelor externe, autohtonii romanizați au evoluat într-un popor nou, cu identitate distinctă, limba română formându-se din dialecte neolatine, asigurându-le individualitatea în contextul european.</p>
     
 </main>
-    <script>
+
+<script>
     let zoomLevel = 1;
 
     document.addEventListener('wheel', function(event) {
@@ -120,3 +121,4 @@
 
 </body>
 </html>
+
