--- a/Marile alianțe politico militare.html
+++ b/Marile alianțe politico militare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marile alianțe politico-militare</title>
+    <title>Marile alianțe politico militare</title>
     <style>
         body {
             margin: 0;
