--- a/clasa7.html
+++ b/clasa7.html
@@ -63,7 +63,7 @@
     <a href="index.html">Acasă</a>
     <a href="clasa5.html">Clasa a V-a</a>
     <a href="clasa6.html" target="_blank">Clasa a VI-a</a>
-    <a href="clasa7.html" target="_blank">Clasa a VII-a</a>
+    <a href="clasa7.html">Clasa a VII-a</a>
     <a href="clasa8.html" target="_blank">Clasa a VIII-a</a>
 </nav>
 
