--- a/clasa8.html
+++ b/clasa8.html
@@ -64,7 +64,7 @@
     <a href="clasa5.html">Clasa a V-a</a>
     <a href="clasa6.html" target="_blank">Clasa a VI-a</a>
     <a href="clasa7.html" target="_blank">Clasa a VII-a</a>
-    <a href="clasa8.html">Clasa a VIII-a</a>
+    <a href="clasa8.html" target="_blank">Clasa a VIII-a</a>
 </nav>
 
 <main>
