Update Poporul român, popor romanic.html

--- a/Poporul român, popor romanic.html
+++ b/Poporul român, popor romanic.html
@@ -20,6 +20,7 @@
             padding: 20px;
             text-align: justify;
             font-size: 18px;
+            transition: transform 0.3s ease; /* Tranziție lină la zoom */
         }
         h2 {
             color: #ff9800; /* Portocaliu */
