--- a/templeșipriramide.html
+++ b/templeșipriramide.html
@@ -33,6 +33,7 @@
         img {
             max-width: 45%; /* Setează lățimea maximă a imaginii */
             height: auto; /* Menține proporțiile imaginii */
+            cursor: pointer; /* Modifică cursorul pentru a arăta că imaginea este clicabilă */
         }
         video {
             max-width: 45%; /* Setează lățimea maximă a videoclipului */
@@ -53,8 +54,10 @@
     </p>
     
     <div class="media-container">
-        <!-- Imaginea -->
-        <img src="images/Templul Abu Simbel.png" alt="Imagine reprezentativă" />
+        <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
+        <a href="images/Templul Abu Simbel.png" target="_blank">
+            <img src="images/Templul Abu Simbel.png" alt="Imagine reprezentativă" />
+        </a>
 
         <!-- Videoclipul -->
         <video controls>
@@ -69,8 +72,10 @@
     </p>
 
     <div class="media-container">
-        <!-- Imaginea -->
-         <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt">
+        <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
+        <a href="images/Piramide Egipt.jpg" target="_blank">
+            <img src="images/Piramide Egipt.jpg" alt="Imagine Piramide Egipt">
+        </a>
     </div>
 
     <h2>Ziguratele</h2>
@@ -78,8 +83,10 @@
         Ziguratele, monumente religioase din Mesopotamia, erau construite din cărămizi de lut și aveau formă piramidală, simbolizând aspirația către cer. Acestea includeau temple dedicate divinităților, unde preoții desfășurau activități religioase pentru a asigura bunăvoința zeilor asupra regatului.
     </p>
     <div class="media-container">
-        <!-- Imaginea-->
-         <img src="images/Zigurat Ur.png" alt="Imagine zigurat Ur">
+        <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
+        <a href="images/Zigurat Ur.png" target="_blank">
+            <img src="images/Zigurat Ur.png" alt="Imagine zigurat Ur">
+        </a>
     </div>
 </main>
 
