--- a/clasa7.html
+++ b/clasa7.html
@@ -71,7 +71,7 @@
     <h2>Lecțiile pentru Clasa a VII-a</h2>
     <ul>
         <li><a href="Marile alianțe politico militare.html">Marile alianțe politico-militare în lume</a></li>
-        <li><a href="#">Primul război mondial. Evoluția alianțelor. Fronturile de luptă</a></li>
+        <li><a href="Primul război mondial. Evoluția alianțelor. Fronturile de luptă.html">Primul război mondial. Evoluția alianțelor. Fronturile de luptă</a></li>
         <li><a href="#">Revoluția industrială și războiul. Noul armament și victimele lui</a></li>
         <li><a href="#">Viața în tranșee și „frontul de acasă”</a></li>
         <li><a href="#">România și Primul Război Mondial</a></li>
