--- a/clasa6.html
+++ b/clasa6.html
@@ -73,7 +73,7 @@
         <li><a href="#">Călătoriile şi percepția spațiului în Evul Mediu; mijloace de transport</a></li>
         <li><a href="#">Marile descoperiri ale europenilor: drumuri şi teritorii; consecințe asupra vieții oamenilor</a></li>
         <li><a href="#">Studiu de caz: • Lumea Nouă: cunoaştere, misionarism şi exploatare</a></li>
-        <li><a href="#">Renaşterea: geneza spiritului modern, umanismul</a></li>
+        <li><a href="Renașterea și umanismul.html">Renaşterea: geneza spiritului modern, umanismul</a></li>
         <li><a href="#">Studiu de caz • Leonardo da Vinci şi Michelangelo Buonarroti, Giordano Bruno, Galileo Galilei, Niccolò Machiavelli, William Shakespeare</a></li>
         <li><a href="#">Reforma. Contrareforma</a></li>
         <li><a href="#">Studiu de caz • Barocul</a></li>
