Update Renașterea și umanismul.html

--- a/Renașterea și umanismul.html
+++ b/Renașterea și umanismul.html
@@ -63,16 +63,16 @@
        <p> &emsp;Printre marii artiști ai Renașterii: <strong>Leonardo da Vinci, Michelangelo Buonarroti, Nicollo Machiaveli, Filippo Brunelleschi, Galileo Galilei, Giordano Bruno</strong></p>
     <div class="media-container">
         <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
-        <a href="Images/Domul din Florența.jpg" target="_blank">
-            <img src="Images/Domul din Florența.jpg" alt="Domul din Florența"/>
+        <a href="images/Domul din Florența.jpg" target="_blank">
+            <img src="images/Domul din Florența.jpg" alt="Domul din Florența"/>
             <div class="caption">Domul din Florența</div>
         </a>
-        <a href="Images/Mona Lisa.jpg" target="_blank">
-            <img src="Images/Mona Lisa.jpg" alt="Mona Lisa"/>
+        <a href="images/Mona Lisa.jpg" target="_blank">
+            <img src="images/Mona Lisa.jpg" alt="Mona Lisa"/>
             <div class="caption">Mona Lisa</div>
         </a>  
-        <a href="Images/Univ. din Bologna.jpg" target="_blank">
-            <img src="Images/Univ. din Bologna.jpg" alt="Universitatea din Bologna"/>
+        <a href="images/Univ. din Bologna.jpg" target="_blank">
+            <img src="images/Univ. din Bologna.jpg" alt="Universitatea din Bologna"/>
             <div class="caption">Universitatea din Bologna</div>
         </a> 
     </div>
@@ -82,12 +82,12 @@
 
     <div class="media-container">
         <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
-        <a href="Images/Cina cea de taină.jpg" target="_blank">
-            <img src="Images/Cina cea de taină.jpg" alt="Cina cea de taină"/>
+        <a href="images/Cina cea de taină.jpg" target="_blank">
+            <img src="images/Cina cea de taină.jpg" alt="Cina cea de taină"/>
             <div class="caption">Cina cea de taină</div>
         </a>
-        <a href="Images/Crearea lui Adam.jpg" target="_blank">
-            <img src="Images/Crearea lui Adam.jpg" alt="Crearea lui Adam">
+        <a href="images/Crearea lui Adam.jpg" target="_blank">
+            <img src="images/Crearea lui Adam.jpg" alt="Crearea lui Adam">
             <div class="caption">Crearea lui Adam</div>
         </a>
     </div>
