--- a/clasa8.html
+++ b/clasa8.html
@@ -80,7 +80,7 @@
         <li><a href="Așezarea slavilor la S-ul Dunării. Romanitatea orientală.html">Așezarea slavilor la sudul Dunării. Romanitatea orientală</a></li>
         <li><a href="Poporul român, popor romanic.html">Poporul român, popor romanic</a></li>
         <li><a href="Primele forme de organizare statală.html">Primele forme de organizare statală</a></li>
-        <li><a href="#">Statele medievale în spațiul românesc:Transilvania, Țara Românească, Moldova, Dobrogea</a></li>
+        <li><a href="Statele medievale în spațiul românesc.html">Statele medievale în spațiul românesc:Transilvania, Țara Românească, Moldova, Dobrogea</a></li>
         <li><a href="#">Spațiul românesc și politica de cruciadă târzie, de la Mircea cel Bătrân la Mihai Viteazul</a></li>
         <li><a href="#">Constantin Brâncoveanu. Dimitrie Cantemir</a></li>
         <li><a href="#">Iluminism și reformism. Transilvania sub Habsburgi</a></li>
