Update Statele medievale în spațiul românesc.html

--- a/Statele medievale în spațiul românesc.html
+++ b/Statele medievale în spațiul românesc.html
@@ -85,16 +85,16 @@
         
         <div class="media-container">
             <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
-            <a href="Images/Batalia de la Posada.jpg" target="_blank">
-                <img src="Images/Batalia de la Posada.jpg" alt="Bătălia de la Posada"/>
+            <a href="images/Batalia de la Posada.jpg" target="_blank">
+                <img src="images/Batalia de la Posada.jpg" alt="Bătălia de la Posada"/>
                 <div class="caption">Bătălia de la Posada</div>
             </a>
-            <a href="Images/Basarab I.jpg" target="_blank">
-                <img src="Images/Basarab I.jpg" alt="Basarab I"/>
+            <a href="images/Basarab I.jpg" target="_blank">
+                <img src="images/Basarab I.jpg" alt="Basarab I"/>
                 <div class="caption">Basarab I</div>
             </a>  
-            <a href="Images/Carol Robert de Anjou.jpg" target="_blank">
-                <img src="Images/Carol Robert de Anjou.jpg" alt="Carol Robert de Anjou"/>
+            <a href="images/Carol Robert de Anjou.jpg" target="_blank">
+                <img src="images/Carol Robert de Anjou.jpg" alt="Carol Robert de Anjou"/>
                 <div class="caption">Carol Robert de Anjou</div>
             </a> 
         </div>
@@ -105,17 +105,17 @@
         <p>&emsp; - Adevăratul întemeietor al Moldovei - Bogdan I</p>
         <div class="media-container">
             <!-- Imaginea cu link pentru deschiderea într-un tab nou -->
-            <a href="Images/Ludovic I.jpg" target="_blank">
-                <img src="Images/Ludovic I.jpg" alt="Ludovic I"/>
+            <a href="images/Ludovic I.jpg" target="_blank">
+                <img src="images/Ludovic I.jpg" alt="Ludovic I"/>
                 <div class="caption">Ludovic I</div>
             </a>
-            <a href="Images/Dragos I.jpg" target="_blank">
-                <img src="Images/Dragos I.jpg" alt="Dragoș I"/>
+            <a href="images/Dragos I.jpg" target="_blank">
+                <img src="images/Dragos I.jpg" alt="Dragoș I"/>
                 <div class="caption">Dragoș I</div>
             </a>
              
-            <a href="Images/Bogdan I.jpg" target="_blank">
-                <img src="Images/Bogdan I.jpg" alt="Bogdan I"/>
+            <a href="images/Bogdan I.jpg" target="_blank">
+                <img src="images/Bogdan I.jpg" alt="Bogdan I"/>
                 <div class="caption">Bogdan I</div>
             </a>
         </div>
